--- a/unit-02.html
+++ b/unit-02.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Unit 2 - Introduction to Software</title>
-  <link rel="stylesheet" href="css/common.css" />
+  <link rel="stylesheet" href="common.css" />
 </head>
 
 <body>
@@ -64,7 +64,7 @@
     </ul>
   </section>
 
-  <script src="./js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
